--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>One Page Module | Canvas</title>
+	<title>SP COMUNICAÇÃO</title>
 
 </head>
 
@@ -129,8 +129,8 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="index.html" class="standard-logo" data-dark-logo="images/canvasone-dark.png"><img src="images/canvasone.png" alt="Canvas Logo"></a>
-						<a href="index.html" class="retina-logo" data-dark-logo="images/canvasone-dark@2x.png"><img src="images/canvasone@2x.png" alt="Canvas Logo"></a>
+						<a href="index.html" class="standard-logo" data-dark-logo="images/logo.png"><img src="images/logo.png" alt="SP Logo"></a>
+						<a href="index.html" class="retina-logo" data-dark-logo="images/logo.png"><img src="images/logo.png" alt="SP Logo"></a>
 					</div><!-- #logo end -->
 
 					<!-- Primary Navigation
@@ -138,12 +138,12 @@
 					<nav id="primary-menu">
 
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="65">
-							<li><a href="#" data-href="#wrapper"><div>Home</div></a></li>
-							<li><a href="#" data-href="#section-about"><div>About</div></a></li>
-							<li><a href="#" data-href="#section-works"><div>Works</div></a></li>
-							<li><a href="#" data-href="#section-services"><div>Services</div></a></li>
-							<li><a href="#" data-href="#section-blog"><div>Blog</div></a></li>
-							<li><a href="#" data-href="#section-contact"><div>Contact</div></a></li>
+							<li><a href="#" data-href="#wrapper"><div>HOME</div></a></li>
+							<li><a href="#" data-href="#section-about"><div>SOBRE A SP</div></a></li>
+							<li><a href="#" data-href="#section-works"><div>SOLUÇÕES</div></a></li>
+							<!-- <li><a href="#" data-href="#section-services"><div>Services</div></a></li>
+							<li><a href="#" data-href="#section-blog"><div>Blog</div></a></li> -->
+							<li><a href="#" data-href="#section-contact"><div>CONTATO</div></a></li>
 						</ul>
 
 						<div id="side-panel-trigger" class="side-panel-trigger"><a href="#"><i class="icon-reorder"></i></a></div>
@@ -169,11 +169,11 @@
 							<div class="emphasis-title">
 								<h1>
 									<span class="text-rotater nocolor" data-separator="|" data-rotate="fadeIn" data-speed="6000">
-										<span class="t-rotate t700 font-body opm-large-word">canvas.|different.|creative.|digital.|vision.</span>
+										<span class="t-rotate t700 font-body opm-large-word">SPCOMUNICAÇÃO|digital|criatividade|visão</span>
 									</span>
 								</h1>
 							</div>
-							<a href="#" class="button button-border button-light button-circle" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">View our Works</a>
+							<a href="#" class="button button-border button-light button-circle" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">CONHEÇA NOSSOS SERVIÇOS</a>
 						</div>
 					</div>
 
@@ -199,11 +199,12 @@
 
 					<div class="container clearfix">
 
-						<h2 class="divcenter bottommargin font-body" style="max-width: 700px; font-size: 40px;">A digital web studio creating stunning &amp; engaging online experiences</h2>
+						<h2 class="divcenter bottommargin font-body" style="max-width: 700px; font-size: 40px;">Somos uma agência que oferece soluções.</h2>
 
-						<p class="lead divcenter bottommargin" style="max-width: 800px;">Ford Foundation reduce child mortality fight against oppression refugee disruption pursue these aspirations effect. Free-speech Nelson Mandela change liberal; challenges of our times sustainability institutions.</p>
+						<p class="lead divcenter bottommargin" style="max-width: 800px;">Soluções eficazes e que nos fazem brilhar os olhos.
+Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resultados para o seu negócio.</p>
 
-						<p class="bottommargin" style="font-size: 16px;"><a href="#" data-scrollto="#section-services" data-easing="easeInOutExpo" data-speed="1250" data-offset="70" class="more-link">Learn more <i class="icon-angle-right"></i></a></p>
+						<p class="bottommargin" style="font-size: 16px;"><a href="#" data-scrollto="#section-services" data-easing="easeInOutExpo" data-speed="1250" data-offset="70" class="more-link">Leia mais<i class="icon-angle-right"></i></a></p>
 
 						<div class="clear"></div>
 
@@ -213,7 +214,7 @@
 
 								<div class="team">
 									<div class="team-image">
-										<img src="images/team/1.jpg" alt="John Doe">
+										<img src="images/team/peixe.jpg" alt="RODOLFO PEIXINHO">
 										<div class="team-overlay">
 											<div class="team-social-icons">
 												<a href="#" class="social-icon si-borderless si-small si-facebook" title="Facebook">
@@ -232,7 +233,7 @@
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>John Doe</h4><span>CEO</span></div>
+										<div class="team-title"><h4>RODOLFO PEIXINHO</h4><span>PLANEJAMENTO/MíDIA</span></div>
 									</div>
 								</div>
 
@@ -242,7 +243,7 @@
 
 								<div class="team">
 									<div class="team-image">
-										<img src="images/team/2.jpg" alt="Josh Clark">
+										<img src="images/team/stella.jpg" alt="STELLA SOARES">
 										<div class="team-overlay">
 											<div class="team-social-icons">
 												<a href="#" class="social-icon si-borderless si-small si-twitter" title="Twitter">
@@ -261,7 +262,7 @@
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Mary Jane</h4><span>Co-Founder</span></div>
+										<div class="team-title"><h4>STELLA SOARES</h4><span>PLANEJAMENTO/SOCIAL MEDIA</span></div>
 									</div>
 								</div>
 
@@ -271,7 +272,7 @@
 
 								<div class="team">
 									<div class="team-image">
-										<img src="images/team/3.jpg" alt="Mary Jane">
+										<img src="images/team/rapha.jpg" alt="RAPHAELLA QUARTERONE">
 										<div class="team-overlay">
 											<div class="team-social-icons">
 												<a href="#" class="social-icon si-borderless si-small si-twitter" title="Twitter">
@@ -290,7 +291,7 @@
 										</div>
 									</div>
 									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>Josh Clark</h4><span>Sales</span></div>
+										<div class="team-title"><h4>RAPHAELLA QUARTERONE</h4><span>CRIAÇÃO</span></div>
 									</div>
 								</div>
 
@@ -301,7 +302,7 @@
 					</div>
 
 				</div>
-
+<!--
 				<div id="section-works" class="page-section notoppadding">
 
 					<div class="section nomargin">
@@ -313,7 +314,7 @@
 					</div>
 
 					<!-- Portfolio Items
-					============================================= -->
+					=============================================
 					<div id="portfolio" class="portfolio grid-container portfolio-nomargin portfolio-full portfolio-masonry mixed-masonry clearfix">
 
 						<article class="portfolio-item pf-media pf-icons wide">
@@ -414,32 +415,32 @@
 							</div>
 						</article>
 
-					</div><!-- #portfolio end -->
+					</div #portfolio end
 
 					<div class="topmargin center"><a href="#" class="button button-border button-circle t600">View More Projects</a></div>
 
-				</div>
+				</div> -->
 
 				<div id="section-services" class="page-section notoppadding">
 
 					<div class="section nomargin">
 						<div class="container clearfix">
 							<div class="divcenter center" style="max-width: 900px;">
-								<h2 class="nobottommargin t300 ls1">We enjoy working on the Services &amp; Products we provide as much as you need them. This help us in delivering your Goals easily. Browse through the wide range of services we provide.</h2>
+								<h2 class="nobottommargin t300 ls1">Viver na maior cidade do Brasil não é fácil. É preciso encontrar formas de otimizar o dia para fazer tudo o que queremos. É preciso nos planejar para no final do mês ter vivido experiências únicas e entregado o nosso melhor. Isso tudo faz parte da nossa vida e do DNA da SP. Não vemos problemas, mas sim desafios que nos motivam a superar.</h2>
 							</div>
 						</div>
 					</div>
 
 					<div class="common-height clearfix">
 
-						<div class="col-md-4 hidden-xs" style="background: url('../images/services/main-bg.jpg') center center no-repeat; background-size: cover;"></div>
+						<div class="col-md-4 hidden-xs" style="background: url('images/services/main-bg.jpg') center center no-repeat; background-size: cover;"></div>
 						<div class="col-md-8">
 							<div class="max-height">
 								<div class="row common-height grid-border clearfix">
 									<div class="col-md-4 col-sm-6 col-padding">
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
 											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-mobile"></i></a>
+												<a href="#"><i class="icon-et-gears"></i></a>
 											</div>
 											<h3>Responsive Framework</h3>
 										</div>
@@ -492,7 +493,7 @@
 
 					<div class="section dark nomargin">
 						<div class="divcenter center" style="max-width: 900px;">
-							<h2 class="nobottommargin t300 ls1">Like Our Services? Get an <a href="#" data-scrollto="#template-contactform" data-offset="140" data-easing="easeInOutExpo" data-speed="1250" class="button button-border button-circle button-light button-large notopmargin nobottommargin" style="position: relative; top: -3px;">Instant Quote</a></h2>
+							<h2 class="nobottommargin t300 ls1">Partiu trocar cartões?  <a href="#" data-scrollto="#template-contactform" data-offset="140" data-easing="easeInOutExpo" data-speed="1250" class="button button-border button-circle button-light button-large notopmargin nobottommargin" style="position: relative; top: -3px;">FALE CONOSCO</a></h2>
 						</div>
 					</div>
 
@@ -546,7 +547,7 @@
 
 				</div>
 
-				<div id="section-blog" class="page-section">
+				<!-- <div id="section-blog" class="page-section">
 
 					<h2 class="center uppercase t300 ls3 font-body">Recently From the Blog</h2>
 
@@ -634,7 +635,7 @@
 							</div>
 
 						</div>
-					</div>
+					</div> -->
 
 					<div class="container topmargin-lg clearfix">
 
@@ -656,7 +657,7 @@
 					</div>
 
 				</div>
-
+<!--
 				<div id="section-contact" class="page-section notoppadding">
 
 					<div class="row noleftmargin norightmargin bottommargin-lg common-height">
@@ -689,7 +690,7 @@
 							</div>
 						</div>
 					</div>
-
+ -->
 
 
 					<div class="container clearfix">
