--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="SemiColonWeb" />
+	<meta name="author" content="RCD" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -830,7 +830,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 
 			<div id="copyrights">
 				<div class="container center clearfix">
-					Copyright Canvas 2015 | All Rights Reserved
+					Copyright SP COMUNICAÇÃO 2017 | All Rights Reserved
 				</div>
 			</div>
 
