--- a/site/index.html
+++ b/site/index.html
@@ -162,7 +162,7 @@
 
 			<div class="slider-parallax-inner">
 
-				<div class="full-screen force-full-screen dark section nopadding nomargin noborder ohidden" style="background-image: url('images/page/main.jpg'); background-size: cover; background-position: center center;">
+				<div class="full-screen force-full-screen dark section nopadding nomargin noborder ohidden" style="background-image: url('images/page/op1.jpg'); background-size: cover; background-position: center center;">
 
 					<div class="container center">
 						<div class="vertical-middle">
