Ajuste cores e palavras

--- a/site/index.html
+++ b/site/index.html
@@ -168,8 +168,9 @@
 						<div class="vertical-middle">
 							<div class="emphasis-title">
 								<h1>
-									<span class="text-rotater nocolor" data-separator="|" data-rotate="fadeIn" data-speed="6000">
-										<span class="t-rotate t700 font-body opm-large-word">SPCOMUNICAÇÃO|digital|criatividade|visão</span>
+									<span class="text-rotater nocolor" data-separator="|" data-rotate="fadeIn" data-speed="5000">
+										<span class="t-rotate t700 font-body opm-large-word">digital|criatividade|visão</span>
+										<!-- <span class="t-rotate t700 font-body opm-large-word"><img src="images/logo.png">|digital|SP|criatividade|SP|visão|SP|Comunicação</span> -->
 									</span>
 								</h1>
 							</div>
@@ -769,12 +770,12 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 								<h4>Site Links</h4>
 
 								<ul class="list-unstyled footer-site-links nobottommargin">
-									<li><a href="#" data-scrollto="#wrapper" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Top</a></li>
-									<li><a href="#" data-scrollto="#section-about" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">About</a></li>
-									<li><a href="#" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Works</a></li>
-									<li><a href="#" data-scrollto="#section-services" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Services</a></li>
-									<li><a href="#" data-scrollto="#section-blog" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Blog</a></li>
-									<li><a href="#" data-scrollto="#section-contact" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Contact</a></li>
+									<li><a href="#" data-scrollto="#wrapper" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">TOP</a></li>
+									<li><a href="#" data-scrollto="#section-about" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">SOBRE A SP</a></li>
+									<li><a href="#" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">SOLUÇÕES</a></li>
+									<!-- <li><a href="#" data-scrollto="#section-services" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Services</a></li>
+									<li><a href="#" data-scrollto="#section-blog" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Blog</a></li> -->
+									<li><a href="#" data-scrollto="#section-contact" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">CONTATO</a></li>
 								</ul>
 							</div>
 
