ajuste logo color change, bg form

--- a/site/index.html
+++ b/site/index.html
@@ -129,9 +129,16 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="index.html" class="standard-logo" data-dark-logo="images/logo.png"><img src="images/logo.png" alt="SP Logo"></a>
-						<a href="index.html" class="retina-logo" data-dark-logo="images/logo.png"><img src="images/logo.png" alt="SP Logo"></a>
+						<a href="index.html" class="standard-logo" data-dark-logo="images/logodark.png"><img src="images/logo.png" alt="SP Logo"></a>
+						<a href="index.html" class="retina-logo" data-dark-logo="images/logodark.png"><img src="images/logo.png" alt="SP Logo"></a>
 					</div><!-- #logo end -->
+
+					<!-- Logo
+					=============================================
+					<div id="logo">
+						<a href="index.html" class="standard-logo" data-dark-logo="images/canvasone-dark.png"><img src="images/canvasone.png" alt="Canvas Logo"></a>
+						<a href="index.html" class="retina-logo" data-dark-logo="images/canvasone-dark@2x.png"><img src="images/canvasone@2x.png" alt="Canvas Logo"></a>
+					</div> #logo end -->
 
 					<!-- Primary Navigation
 					============================================= -->
@@ -694,7 +701,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
  -->
 
 
-					<div class="container clearfix">
+					<div class="container clearfix bgroxo">
 
 						<div class="divcenter topmargin" style="max-width: 850px;">
 
@@ -730,9 +737,9 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 									</div>
 
 									<div class="col_full center">
-										<button class="button button-border button-circle t500 noleftmargin topmargin-sm" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">Send Message</button>
+										<button class="button button-border button-circle t500 noleftmargin topmargin-sm" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">ENVIAR</button>
 										<br>
-										<small style="display: block; font-size: 13px; margin-top: 15px;">We'll do our best to get back to you within 6-8 working hours.</small>
+										<!-- <small style="display: block; font-size: 13px; margin-top: 15px;">We'll do our best to get back to you within 6-8 working hours.</small> -->
 									</div>
 
 									<div class="clear"></div>
@@ -767,7 +774,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 						<div class="col-md-4">
 
 							<div class="widget clearfix">
-								<h4>Site Links</h4>
+								<h4>NAVEGUE</h4>
 
 								<ul class="list-unstyled footer-site-links nobottommargin">
 									<li><a href="#" data-scrollto="#wrapper" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">TOP</a></li>
@@ -798,9 +805,9 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 						<div class="col-md-4">
 
 							<div class="widget clearfix">
-								<h4>Contact</h4>
+								<h4>SIGA-NOS</h4>
 
-								<p class="lead">795 Folsom Ave, Suite 600<br>San Francisco, CA 94107</p>
+								<p class="lead">Siga a SP e fique por dentro <br>das últimas novidades <br>em publicide digital</p>
 
 								<div class="center topmargin-sm">
 									<a href="#" class="social-icon inline-block noborder si-small si-facebook" title="Facebook">
@@ -811,13 +818,13 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 										<i class="icon-twitter"></i>
 										<i class="icon-twitter"></i>
 									</a>
-									<a href="#" class="social-icon inline-block noborder si-small si-github" title="Github">
-										<i class="icon-github"></i>
-										<i class="icon-github"></i>
+									<a href="#" class="social-icon inline-block noborder si-small si-github" title="Instagram">
+										<i class="icon-instagram"></i>
+										<i class="icon-instagram"></i>
 									</a>
-									<a href="#" class="social-icon inline-block noborder si-small si-pinterest" title="Pinterest">
-										<i class="icon-pinterest"></i>
-										<i class="icon-pinterest"></i>
+									<a href="#" class="social-icon inline-block noborder si-small si-pinterest" title="Linkedin">
+										<i class="icon-linkedin"></i>
+										<i class="linkedin"></i>
 									</a>
 								</div>
 							</div>
