--- a/site/index.html
+++ b/site/index.html
@@ -147,7 +147,7 @@
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="65">
 							<li><a href="#" data-href="#wrapper"><div>HOME</div></a></li>
 							<li><a href="#" data-href="#section-about"><div>SOBRE A SP</div></a></li>
-							<li><a href="#" data-href="#section-works"><div>SOLUÇÕES</div></a></li>
+							<li><a href="#" data-href="#section-services"><div>SOLUÇÕES</div></a></li>
 							<!-- <li><a href="#" data-href="#section-services"><div>Services</div></a></li>
 							<li><a href="#" data-href="#section-blog"><div>Blog</div></a></li> -->
 							<li><a href="#" data-href="#section-contact"><div>CONTATO</div></a></li>
@@ -441,56 +441,91 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 
 					<div class="common-height clearfix">
 
-						<div class="col-md-4 hidden-xs" style="background: url('images/services/main-bg.jpg') center center no-repeat; background-size: cover;"></div>
+
+						<div class="col-md-4 hidden-xs " style="background: url('images/services/main-bg.jpg') center center no-repeat; background-size: cover;"></div>
 						<div class="col-md-8">
 							<div class="max-height">
 								<div class="row common-height grid-border clearfix">
 									<div class="col-md-4 col-sm-6 col-padding">
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
+
 											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-gears"></i></a>
+												<a href="#"> <img src="images/icons/socialmedia.svg" alt="social media icon"></a>
 											</div>
-											<h3>Responsive Framework</h3>
+											
+											<h3>SOCIAL MEDIA</h3>
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding">
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
 											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-presentation"></i></a>
+												<a href="#"> <img src="images/icons/crm.svg" alt="CRM icon"></a>
 											</div>
-											<h3>Beautifully Presented</h3>
+
+											<h3>CRM</h3>
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding">
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
 											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-puzzle"></i></a>
+												<a href="#"> <img src="images/icons/email.svg" alt="mail marketing icon"></a>
 											</div>
-											<h3>Extensively Extendable</h3>
+
+											<h3>E-MAIL MARKETING</h3>
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding">
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
 											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-gears"></i></a>
+												<a href="#"> <img src="images/icons/midia.svg" alt="Midia icon"></a>
 											</div>
-											<h3>Powerfully Customizable</h3>
+
+											<h3>MÍDIA</h3>
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding">
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
 											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-genius"></i></a>
+												<a href="#"> <img src="images/icons/perf.svg" alt="PERFORMANCE icon"></a>
 											</div>
-											<h3>Geniusly Transformable</h3>
+
+											<h3>PERFORMANCE</h3>
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding">
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
 											<div class="fbox-icon">
-												<a href="#"><i class="icon-et-hotairballoon"></i></a>
+												<a href="#"> <img src="images/icons/dev.svg" alt="DESENVOLVIMENTO icon"></a>
 											</div>
-											<h3>Industrial Support</h3>
+
+											<h3>DESENVOLVIMENTO DE SITE</h3>
+										</div>
+									</div>
+                                    <div class="col-md-4 col-sm-6 col-padding">
+										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
+											<div class="fbox-icon">
+												<a href="#"> <img src="images/icons/ecomm.svg" alt="E-Commerce icon"></a>
+											</div>
+
+											<h3>E-COMMERCE</h3>
+										</div>
+									</div>
+                                    <div class="col-md-4 col-sm-6 col-padding">
+										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
+											<div class="fbox-icon">
+												<a href="#"> <img src="images/icons/mult.svg" alt="Multimidia icon"></a>
+											</div>
+
+											<h3>MULTIMÍDIA</h3>
+										</div>
+									</div>
+                                    <div class="col-md-4 col-sm-6 col-padding">
+										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
+											<div class="fbox-icon">
+												<a href="#"> <img src="images/icons/prodfot.svg" alt="PRODUCÃO FOTOGRAFÍCA icon"></a>
+											</div>
+
+											<h3>PRODUCÃO FOTOGRAFÍCA</h3>
 										</div>
 									</div>
 								</div>
@@ -701,7 +736,9 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
  -->
 
 
-					<div class="container clearfix bgroxo">
+					<div id="section-contact" class="container clearfix bgroxo">
+
+
 
 						<div class="divcenter topmargin" style="max-width: 850px;">
 
@@ -777,7 +814,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 								<h4>NAVEGUE</h4>
 
 								<ul class="list-unstyled footer-site-links nobottommargin">
-									<li><a href="#" data-scrollto="#wrapper" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">TOP</a></li>
+									<li><a href="#" data-scrollto="#wrapper" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">HOME</a></li>
 									<li><a href="#" data-scrollto="#section-about" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">SOBRE A SP</a></li>
 									<li><a href="#" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">SOLUÇÕES</a></li>
 									<!-- <li><a href="#" data-scrollto="#section-services" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Services</a></li>
@@ -807,7 +844,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 							<div class="widget clearfix">
 								<h4>SIGA-NOS</h4>
 
-								<p class="lead">Siga a SP e fique por dentro <br>das últimas novidades <br>em publicide digital</p>
+								<p class="lead">Siga a SP e fique por dentro <br>das últimas novidades <br>em publicidade digital</p>
 
 								<div class="center topmargin-sm">
 									<a href="#" class="social-icon inline-block noborder si-small si-facebook" title="Facebook">
@@ -818,11 +855,11 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 										<i class="icon-twitter"></i>
 										<i class="icon-twitter"></i>
 									</a>
-									<a href="#" class="social-icon inline-block noborder si-small si-github" title="Instagram">
+									<a href="#" class="social-icon inline-block noborder si-small si-instagram" title="Instagram">
 										<i class="icon-instagram"></i>
 										<i class="icon-instagram"></i>
 									</a>
-									<a href="#" class="social-icon inline-block noborder si-small si-pinterest" title="Linkedin">
+									<a href="#" class="social-icon inline-block noborder si-small si-linkedin" title="Linkedin">
 										<i class="icon-linkedin"></i>
 										<i class="linkedin"></i>
 									</a>
