Varios ajustes site pronto v2

--- a/site/index.html
+++ b/site/index.html
@@ -22,6 +22,8 @@
 	<link rel="stylesheet" href="../css/magnific-popup.css" type="text/css" />
 
 	<link rel="stylesheet" href="css/fonts.css" type="text/css" />
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+
 
 	<link rel="stylesheet" href="../css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -44,19 +46,19 @@
 
 			<div class="widget widget_links clearfix">
 
-				<h4>About Canvas</h4>
+				<h4></h4>
 
 				<div style="font-size: 14px; line-height: 1.7;">
 					<address style="line-height: 1.7;">
-						795 Folsom Ave, Suite 600<br>
-						San Francisco, CA 94107<br>
+						<br>
+						<br>
 					</address>
 
 					<div class="clear topmargin-sm"></div>
 
-					<abbr title="Phone Number">Phone:</abbr> (91) 8547 632521<br>
-					<abbr title="Fax">Fax:</abbr> (91) 11 4752 1433<br>
-					<abbr title="Email Address">Email:</abbr> info@canvas.com
+					<abbr title="Phone Number">Phone:</abbr> (<br>
+					<abbr title="Fax">Fax:</abbr> <br>
+					<abbr title="Email Address">Email:</abbr>
 				</div>
 
 			</div>
@@ -211,7 +213,7 @@
 							<img src="images\logo-topo.png" alt="Logo SP">
 						</div>
 
-						<h2 class="divcenter bottommargin font-body" style="max-width: 700px; font-size: 40px;">Somos uma agência que oferece soluções.</h2>
+						<h2 class="divcenter bottommargin font-body lsm1" style="max-width: 700px; font-size: 40px;">Somos uma agência que oferece soluções.</h2>
 
 						<p class="lead divcenter bottommargin" style="max-width: 800px;">Soluções eficazes e que nos fazem brilhar os olhos.
 Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resultados para o seu negócio.</p>
@@ -222,38 +224,6 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 
 						<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
 
-							<div class="col-sm-4 bottommargin">
-
-								<div class="team">
-									<div class="team-image">
-										<img src="images/team/peixe.jpg" alt="RODOLFO PEIXINHO">
-                                        <div class="team-overlay">
-                                            </div>
-<!--
-										<div class="team-overlay">
-											<div class="team-social-icons">
-												<a href="#" class="social-icon si-borderless si-small si-facebook" title="Facebook">
-													<i class="icon-facebook"></i>
-													<i class="icon-facebook"></i>
-												</a>
-												<a href="#" class="social-icon si-borderless si-small si-twitter" title="Twitter">
-													<i class="icon-twitter"></i>
-													<i class="icon-twitter"></i>
-												</a>
-												<a href="#" class="social-icon si-borderless si-small si-github" title="Github">
-													<i class="icon-github"></i>
-													<i class="icon-github"></i>
-												</a>
-											</div>
-										</div>
--->
-									</div>
-									<div class="team-desc team-desc-bg">
-										<div class="team-title"><h4>RODOLFO PEIXINHO</h4><span>PLANEJAMENTO/MíDIA</span></div>
-									</div>
-								</div>
-
-							</div>
 
 							<div class="col-sm-4 bottommargin">
 
@@ -288,6 +258,40 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 								</div>
 
 							</div>
+
+
+														<div class="col-sm-4 bottommargin">
+
+															<div class="team">
+																<div class="team-image">
+																	<img src="images/team/peixe.jpg" alt="RODOLFO PEIXINHO">
+							                                        <div class="team-overlay">
+							                                            </div>
+							<!--
+																	<div class="team-overlay">
+																		<div class="team-social-icons">
+																			<a href="#" class="social-icon si-borderless si-small si-facebook" title="Facebook">
+																				<i class="icon-facebook"></i>
+																				<i class="icon-facebook"></i>
+																			</a>
+																			<a href="#" class="social-icon si-borderless si-small si-twitter" title="Twitter">
+																				<i class="icon-twitter"></i>
+																				<i class="icon-twitter"></i>
+																			</a>
+																			<a href="#" class="social-icon si-borderless si-small si-github" title="Github">
+																				<i class="icon-github"></i>
+																				<i class="icon-github"></i>
+																			</a>
+																		</div>
+																	</div>
+							-->
+																</div>
+																<div class="team-desc team-desc-bg">
+																	<div class="team-title"><h4>RODOLFO PEIXINHO</h4><span>PLANEJAMENTO/MíDIA</span></div>
+																</div>
+															</div>
+
+														</div>
 
 							<div class="col-sm-4 bottommargin">
 
@@ -755,7 +759,9 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 
 					<div class="container topmargin-lg clearfix">
 
-						<div id="oc-clients" class="owl-carousel topmargin image-carousel carousel-widget" data-margin="80" data-loop="true" data-nav="false" data-autoplay="5000" data-pagi="false"data-items-xxs="2" data-items-xs="2" data-items-sm="2" data-items-md="2" data-items-lg="2">
+						<div id="oc-clients" class="owl-carousel topmargin image-carousel carousel-widget" data-margin="80" data-loop="false" data-nav="false" data-pagi="false"data-items-xxs="2" data-items-xs="2" data-items-sm="2" data-items-md="2" data-items-lg="2">
+
+						<!-- <div id="oc-clients bottommargin-lg topmargin-lg clients-inline"> -->
 
 							<div class="oc-item"><a href="#"><img src="../images/clients/1.png" alt="Clients"></a></div>
 							<div class="oc-item"><a href="#"><img src="../images/clients/2.png" alt="Clients"></a></div>
@@ -818,7 +824,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 							<div class="contact-widget">
 
 								<div class="contact-form-result"></div>
-                                <h2 class="change-cards nobottommargin t300 ls1">Partiu trocar cartões?</h2>
+                                <h2 class="change-cards nobottommargin t300 ls1 center">Partiu trocar cartões?</h2>
 								<form class="nobottommargin" id="template-contactform" name="template-contactform" action="include/sendemail.php" method="post">
 
 									<div class="form-process"></div>
