Correct text hover img

--- a/site/index.html
+++ b/site/index.html
@@ -472,11 +472,13 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 
 
 									<div class="col-md-4 col-sm-6 col-padding hover-detail">
+										<div class="details center">
+											<h4>Conversa, relacionamento, proximidade com o consumidor final, o famoso conteúdo digital.</h4>
+											<div class="padadd"> </div>
+											<p>Essas plataformas, de resultado imediato, são um canal indispensável para toda marca que lida com pessoas e quer conquista-las diariamente.</p>
+										</div>
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
-												<h4>Conversa, relacionamento, proximidade com o consumidor final, o famoso conteúdo digital.</h4>
-												<p>Essas plataformas, de resultado imediato, são um canal indispensável para toda marca que lida com pessoas e quer conquista-las diariamente.</p>
-											</div>
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/socialmedia.png" alt="social media icon"></a>
 
@@ -490,11 +492,13 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 
 
 									<div class="col-md-4 col-sm-6 col-padding hover-detail">
+										<div class="details center">
+										<h4>Ouvir, aprender e ir além.</h4>
+										<div class="padadd"> </div>
+										<p>Monitoramento do que, como e onde falam somado ao bom e necessário SAC. A gente tira dúvidas, conversa, entende a percepção dos consumidores e ainda colhe insights valiosos.</p>
+										</div>
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
-											<h4>Ouvir, aprender e ir além.</h4>
-											<p>Monitoramento do que, como e onde falam somado ao bom e necessário SAC. A gente tira dúvidas, conversa, entende a percepção dos consumidores e ainda colhe insights valiosos.</p>
-											</div>
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/crm.png" alt="CRM icon" /></a>
 
@@ -505,11 +509,13 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding hover-detail">
+										<div class="details center">
+										<h4>A mensagem e o mailing precisam ser certeiros e convergentes.</h4>
+										<div class="padadd"> </div>
+										<p>Chega de lotar a caixa de entrada alheia ou e-mails excluídos que nem foram lidos.</p>
+										</div>
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
-											<h4>A mensagem e o mailing precisam ser certeiros e convergentes.</h4>
-											<p>Chega de lotar a caixa de entrada alheia ou e-mails excluídos que nem foram lidos.</p>
-											</div>
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/email.png" alt="mail marketing icon"></a>
 											</div>
@@ -519,11 +525,13 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding hover-detail">
+										<div class="details center">
+										<h4> Mídia </h4>
+										<div class="padadd"> </div>
+										<p>Independentemente de quem e onde o seu público-alvo esteja nós o encontraremos. Seu público-alvo é o nosso novo melhor amigo, sabemos tudo sobre ele e vamos usar isso ao seu favor.</p>
+										</div>
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
-											<h4> Mídia </h4>
-											<p>Independentemente de quem e onde o seu público-alvo esteja nós o encontraremos. Seu público-alvo é o nosso novo melhor amigo, sabemos tudo sobre ele e vamos usar isso ao seu favor.</p>
-											</div>
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/midia.png" alt="Midia icon"></a>
 											</div>
@@ -533,11 +541,13 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding hover-detail">
+										<div class="details center">
+										<h4>Otimização, inteligência, resultados!</h4>
+										<div class="padadd"> </div>
+										<p>É aqui que o ajuste fino acontece e o seu investimento é tratado como um rei. O objetivo é bater todas as metas, doa a quem doer</p>
+										</div>
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
-											<h4>Otimização, inteligência, resultados!</h4>
-											<p>É aqui que o ajuste fino acontece e o seu investimento é tratado como um rei. O objetivo é bater todas as metas, doa a quem doer</p>
-											</div>
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/perf.png" alt="PERFORMANCE icon"></a>
 											</div>
@@ -547,11 +557,14 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 										</div>
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding hover-detail">
+											<div class="details center">
+												<h4>Usabilidade, intuitivoe práticas de SEO.</h4>
+												<div class="padadd"> </div>
+												<p>O seu negócio pronto para ser apresentado para o mundo com um design impecável.</p>
+										 </div>
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
-											<h4>Usabilidade, intuitivoe práticas de SEO.</h4>
-											<p>O seu negócio pronto para ser apresentado para o mundo com um design impecável.</p>
-											</div>
+
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/dev.png" alt="DESENVOLVIMENTO icon"></a>
 											</div>
@@ -560,12 +573,14 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 											<h3>DESENVOLVIMENTO DE SITE</h3>
 										</div>
 									</div>
-                                    <div class="col-md-4 col-sm-6 col-padding hover-detail">
-										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
+                   <div class="col-md-4 col-sm-6 col-padding hover-detail">
+										 <div class="details center">
 											<h4>Vender, vender, vender.</h4>
+											<div class="padadd"> </div>
 											<p>Melhores maneiras de se apresentar os produtos e alcançar o maior ROI.</p>
-											</div>
+										</div>
+										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/ecomm.png" alt="E-Commerce icon"></a>
 											</div>
@@ -575,11 +590,13 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 										</div>
 									</div>
                     <div class="col-md-4 col-sm-6 col-padding hover-detail">
-										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
+											<div class="details center">
 											<h4>Mais vida para o seu conteúdo!</h4>
+											<div class="padadd"> </div>
 											<p>Vídeo, gif, animação. Criação de soluções multimídia do storyboard até a pós-produção.</p>
 											</div>
+										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/mult.png" alt="Multimidia icon"></a>
 											</div>
@@ -589,12 +606,14 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 											<h3>MULTIMÍDIA</h3>
 										</div>
 									</div>
-                                    <div class="col-md-4 col-sm-6 col-padding hover-detail">
+                  <div class="col-md-4 col-sm-6 col-padding hover-detail">
+										<div class="details center">
+										<h4>O seu produto no maior close certo.</h4>
+										<div class="padadd"> </div>
+										<p>Casting, cenário, câmera e todo recurso necessário pra criar o materialde alta qualidade que seu produto merece.</p>
+										</div>
 										<div class="feature-box fbox-center fbox-dark fbox-plain fbox-small nobottomborder">
-											<div class="details">
-											<h4>O seu produto no maior close certo.</h4>
-											<p>Casting, cenário, câmera e todo recurso necessário pra criar o materialde alta qualidade que seu produto merece.</p>
-											</div>
+
 											<div class="fbox-icon">
 												<a> <img src="images/icons/prodfot.png" alt="PRODUCÃO FOTOGRAFÍCA icon"></a>
 											</div>
