varias alteracoes pos entrega

--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
+<!-- <html dir="ltr" lang="en-US"> -->
+<html dir="ltr" lang="pt-BR">
+
 <head>
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -188,7 +190,7 @@
 					</div>
 
 					<div class="video-wrap">
-						<div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
+						<!-- <div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div> -->
 					</div>
 
 					<a href="#" data-scrollto="#section-about" data-easing="easeInOutExpo" data-speed="1250" data-offset="65" class="one-page-arrow dark"><i class="icon-angle-down infinite animated fadeInDown"></i></a>
@@ -526,7 +528,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding hover-detail">
 										<div class="details center">
-										<h4> Mídia </h4>
+										<h4> A mensagem certa para a pessoa certa na hora certa</h4>
 										<div class="padadd"> </div>
 										<p>Independentemente de quem e onde o seu público-alvo esteja nós o encontraremos. Seu público-alvo é o nosso novo melhor amigo, sabemos tudo sobre ele e vamos usar isso ao seu favor.</p>
 										</div>
@@ -558,7 +560,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 									</div>
 									<div class="col-md-4 col-sm-6 col-padding hover-detail">
 											<div class="details center">
-												<h4>Usabilidade, intuitivoe práticas de SEO.</h4>
+												<h4>Usabilidade, intuitivo e práticas de SEO.</h4>
 												<div class="padadd"> </div>
 												<p>O seu negócio pronto para ser apresentado para o mundo com um design impecável.</p>
 										 </div>
@@ -782,8 +784,8 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 
 						<!-- <div id="oc-clients bottommargin-lg topmargin-lg clients-inline"> -->
 
-							<div class="oc-item"><a href="#"><img src="../images/clients/1.png" alt="Clients"></a></div>
-							<div class="oc-item"><a href="#"><img src="../images/clients/2.png" alt="Clients"></a></div>
+							<div class="oc-item"><a><img src="../images/clients/1.png" alt="Clients"></a></div>
+							<div class="oc-item"><a><img src="../images/clients/2.png" alt="Clients"></a></div>
 							<!-- <div class="oc-item"><a href="#"><img src="../images/clients/3.png" alt="Clients"></a></div>
 							<div class="oc-item"><a href="#"><img src="../images/clients/4.png" alt="Clients"></a></div>
 							<div class="oc-item"><a href="#"><img src="../images/clients/5.png" alt="Clients"></a></div>
@@ -849,26 +851,26 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 									<div class="form-process"></div>
 
 									<div class="col_half">
-										<input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control border-form-control required" placeholder="Name" />
+										<input type="text" id="template-contactform-name" name="template-contactform-name" value="" class="sm-form-control border-form-control required" placeholder="Nome" />
 									</div>
 									<div class="col_half col_last">
-										<input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control border-form-control" placeholder="Email Address" />
+										<input type="email" id="template-contactform-email" name="template-contactform-email" value="" class="required email sm-form-control border-form-control" placeholder="Endereço de E-mail" />
 									</div>
 
 									<div class="clear"></div>
 
 									<div class="col_one_third">
-										<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control border-form-control" placeholder="Phone" />
+										<input type="text" id="template-contactform-phone" name="template-contactform-phone" value="" class="sm-form-control border-form-control" placeholder="Telefone" />
 									</div>
 
 									<div class="col_two_third col_last">
-										<input type="text" id="template-contactform-subject" name="template-contactform-subject" value="" class="required sm-form-control border-form-control" placeholder="Subject" />
+										<input type="text" id="template-contactform-subject" name="template-contactform-subject" value="" class="required sm-form-control border-form-control" placeholder="Assunto" />
 									</div>
 
 									<div class="clear"></div>
 
 									<div class="col_full">
-										<textarea class="required sm-form-control border-form-control" id="template-contactform-message" name="template-contactform-message" rows="7" cols="30" placeholder="Your Message"></textarea>
+										<textarea class="required sm-form-control border-form-control" id="template-contactform-message" name="template-contactform-message" rows="7" cols="30" placeholder="Mensagem"></textarea>
 									</div>
 
 									<div class="col_full center">
@@ -914,7 +916,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 								<ul class="list-unstyled footer-site-links nobottommargin">
 									<li><a href="#" data-scrollto="#wrapper" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">HOME</a></li>
 									<li><a href="#" data-scrollto="#section-about" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">SOBRE A SP</a></li>
-									<li><a href="#" data-scrollto="#section-works" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">SOLUÇÕES</a></li>
+									<li><a href="#" data-scrollto="#section-services" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">SOLUÇÕES</a></li>
 									<!-- <li><a href="#" data-scrollto="#section-services" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Services</a></li>
 									<li><a href="#" data-scrollto="#section-blog" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">Blog</a></li> -->
 									<li><a href="#" data-scrollto="#section-contact" data-easing="easeInOutExpo" data-speed="1250" data-offset="70">CONTATO</a></li>
@@ -926,12 +928,12 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 						<div class="col-md-4">
 
 							<div class="widget subscribe-widget clearfix" data-loader="button">
-								<h4>Subscribe</h4>
+								<h4>Inscreva-se</h4>
 
 								<div class="widget-subscribe-form-result"></div>
 								<form id="widget-subscribe-form" action="../include/subscribe.php" role="form" method="post" class="nobottommargin">
-									<input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control input-lg not-dark required email" placeholder="Your Email Address">
-									<button class="button button-border button-circle button-light topmargin-sm" type="submit">Subscribe Now</button>
+									<input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control input-lg not-dark required email" placeholder="Seu Email">
+									<button class="button button-border button-circle button-light topmargin-sm" type="submit">Inscreva-se Agora!</button>
 								</form>
 							</div>
 
@@ -956,8 +958,8 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 									</a>
 -->
 									<a href="https://www.instagram.com/agenciasp/" class="social-icon inline-block noborder si-small si-instagram" title="Instagram">
-										<i class="icon-instagram"></i>
-										<i class="icon-instagram"></i>
+										<i class="icon-instagram2"></i>
+										<i class="icon-instagram2"></i>
 									</a>
 <!--
 									<a href="#" class="social-icon inline-block noborder si-small si-linkedin" title="Linkedin">
