--- a/site/index.html
+++ b/site/index.html
@@ -458,7 +458,7 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 
 					<div class="container topmargin-lg clearfix">
 
-						<div id="oc-clients" class="owl-carousel topmargin image-carousel carousel-widget" data-margin="80" data-loop="false" data-nav="false" data-pagi="false"data-items-xxs="3" data-items-xs="3" data-items-sm="3" data-items-md="3" data-items-lg="3">
+						<div id="oc-clients" class="owl-carousel topmargin image-carousel carousel-widget" data-margin="80" data-loop="true" data-nav="true" data-pagi="true"data-items-xxs="2" data-items-xs="2" data-items-sm="3" data-items-md="3" data-items-lg="3">
 
 						<!-- <div id="oc-clients bottommargin-lg topmargin-lg clients-inline"> -->
 
