--- a/index.html
+++ b/index.html
@@ -584,11 +584,11 @@ Temos o digital como o nosso core, e encontramos a melhor maneira de trazer resu
 								<p class="lead">Siga a SP e fique por dentro <br>das últimas novidades <br>em publicidade digital</p>
 
 								<div class="center topmargin-sm">
-									<a href="https://www.facebook.com/agenciaspcomunicacao" class="social-icon inline-block noborder si-small si-facebook" title="Facebook">
+									<a href="https://www.facebook.com/agenciaspcomunicacao" target="_blank" class="social-icon inline-block noborder si-small si-facebook" title="Facebook">
 										<i class="icon-facebook"></i>
 										<i class="icon-facebook"></i>
 
-									<a href="https://www.instagram.com/agenciasp/" class="social-icon inline-block noborder si-small si-instagram" title="Instagram">
+									<a href="https://www.instagram.com/agenciasp/" target="_blank" class="social-icon inline-block noborder si-small si-instagram" title="Instagram">
 										<i class="icon-instagram2"></i>
 										<i class="icon-instagram2"></i>
 									</a>
